# cmake_googletest

./: CMakeCache.txt  CMakeLists.txt  Makefile  T1  T2  cmake_install.cmake  demo  main.cpp  test.cbp
math/: power.cc  power.h
